After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723537 - x11: compile error on 32-bit
x11: compile error on 32-bit
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-gl
git master
Other Linux
: Normal normal
: 1.2.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-02-03 14:14 UTC by Chris Paulson-Ellis
Modified: 2014-02-04 13:17 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Chris Paulson-Ellis 2014-02-03 14:14:07 UTC
The following trivial patch fixes a compile error in gstglwindow_x11.c on 32-bit systems. The fix requires glib 2.22, but this is okay as it's already the minimum version.

Chris.

--- gst-plugins-gl-git-2afcb176/gst-libs/gst/gl/x11/gstglwindow_x11.c.pre-gl-32-bit	2014-01-22 21:07:43.000000000 +0000
+++ gst-plugins-gl-git-2afcb176/gst-libs/gst/gl/x11/gstglwindow_x11.c	2014-02-03 14:07:42.501320868 +0000
@@ -418,7 +418,7 @@
    * If no loop then the parent is directly set in XCreateWindow
    */
   if (window_x11->loop && g_main_loop_is_running (window_x11->loop)) {
-    GST_LOG ("set parent window id: %lud", id);
+    GST_LOG ("set parent window id: %" G_GUINTPTR_FORMAT "d", id);
 
     g_mutex_lock (&window_x11->disp_send_lock);
     XGetWindowAttributes (window_x11->disp_send, window_x11->parent_win, &attr);
Comment 1 Sebastian Dröge (slomo) 2014-02-04 12:50:08 UTC
commit d64547e111ec689521e68dea790da1330aa8c462
Author: Chris Paulson-Ellis <chris@edesix.com>
Date:   Tue Feb 4 13:49:35 2014 +0100

    x11: Use correct format string for guintptr
    
    https://bugzilla.gnome.org/show_bug.cgi?id=723537