[877/906] x11: Use correct format string for guintptr

https://bugzilla.gnome.org/show_bug.cgi?id=723537